2014-12-13  Mitsutoshi NAKANO  <bkbin005@rinku.zaq.ne.jp>

	* egg.el: egg-version: change version to "5.0.0.1"
	* INSTALL: add.
	* README.ja.UTF-8.txt: rename from README.ja.txt
	* README.ja.UTF-8.txt: rewrite document.

2014-11-17  Mitsutoshi NAKANO  <bkbin005@rinku.zaq.ne.jp>

	* egg.el: egg-version: change version string to "5.0.0.0".
	* Makefile.in, egg-cnv.el, egg.el, egg/anthy.el, egg/canna.el, egg/sj3.el, egg/wnn.el, its.el, leim-list.el, menudiag.el: change version.
	  4 -> 5 or tsunagi.

2014-11-16  Mitsutoshi NAKANO  <bkbin005@rinku.zaq.ne.jp>
	* ChangeLog: rename to ChangeLog.2002-2004.
	* ChangeLog: create new file.
	* egg-cnv.el, its/kata.el: add copyright notice.
	  gniibe said that these files have wrong copyright information.
	  So added notice.
	  See also:
	  http://lists.debian.or.jp/debian-devel/201411/msg00034.html
	  http://sourceforge.jp/projects/tamago-tsunagi/lists/archive/misc/2014-Nov
	  https://anonscm.debian.org/git/pkg-anthy/egg.git/
	* egg.el: add egg-tsunagi-version.