@@ -122,7 +122,7 @@ Or else, execute command that space-bar invokes usually."
   (goto-char end-marker)
   (backward-delete-char 2)
   (let* ((str (buffer-substring beg (point)))
-         (val (string-to-int str)))
+         (val (string-to-number str)))
     (delete-region beg (point))
     (if (= val 0)
         (setq val 1))
@@ -220,7 +220,7 @@ Or else, execute command that space-bar invokes usually."
   (goto-char end-marker)
   (backward-delete-char 2)
   (let* ((str (buffer-substring beg (point)))
-         (val (string-to-int str)))
+         (val (string-to-number str)))
     (delete-region beg (point))
     (if (= val 0)
         (setq val 1))
