@@ -146,7 +146,7 @@ Don't specify the optional arguments in normal use."
 	(setq proc (open-network-stream "SJ3" buf hostname sj3-server-port))
       ((error quit)
        (egg-error "failed to connect sj3 server")))
-    (process-kill-without-query proc)
+    (set-process-query-on-exit-flag proc nil)
     (set-process-coding-system proc 'binary 'binary)
     (set-marker-insertion-type (process-mark proc) t)
     (save-excursion
