@@ -1554,7 +1554,8 @@ Return last state."
   (with-output-to-temp-buffer "*Help*"
     (princ "ITS mode:\n")
     (princ (documentation 'its-mode))
-    (help-setup-xref (cons #'help-xref-mode (current-buffer)) (interactive-p))))
+    (help-setup-xref (cons #'help-xref-mode (current-buffer))
+      (called-interactively-p 'interactive))))
 
 ;; The `point-left' hook function will never be called in Emacs 21.2.50
 ;; when the command `next-line' is used in the last line of a buffer
